final main push for week1. completed Html/CSS. Bootstrap project wil lbe turned in on Monday.

--- a/Week1/Restaurant site/My top 5 favorite restaurants.html
+++ b/Week1/Restaurant site/My top 5 favorite restaurants.html
@@ -1,38 +1,37 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>My top 5 fave restaurants</title>
+	<title>Joe's 5 Fave Eateries</title>
+	<!-- Joe's CSS Stylesheet -->
 	<link rel="stylesheet" type="text/css" href="styles.css">
+
+	
 </head>
-<body>
+
+</head>
+<body id="body">
+	
+
 	<h1>Joe's top 5 favorite restaurants</h1>
 
-	<div>
+	<div class="body-div">
 <!-- Chick-fil-a -->
 		<div class=" rest">
 
 			<a href="http://www.chickFilA.com">
 				<img src="http://thestamp.umd.edu/portals/0/Images/Food/chickFilA.jpg" width="300px" alt="Chick-Fil-A Logo" class="logo">
-				<button class="button">1. Chick-Fil-A</button>
-				<!-- <h3>1. Chick-Fil-A</h3> -->
+				<button class="button1">1. Chick-Fil-A</button> 
 			</a>
+
 			<p>Chick-Fil-a is... Chick-Fil-a. Its good, solid Chicken place!</p>
 			<p><b>Fave dish:</b> Nuggets for the win!</p>
 			<p><b>Rating:</b> 8 or 10</p>
-			
-				<!-- positive reviews -->
-				<!-- <p>Good Reviews:</p>
-				<img src="chickfilaGood1.png" width="400px"><br/>
-				<img src="chickfilaGood2.png" width="400px"><br/>
-				<img src="chickfilaGood3.png" width="400px"> -->
 
-				<a href="">Chick-fil-a<img src="https://s3-media3.fl.yelpcdn.com/assets/srv0/styleguide/24e1fe240f00/assets/img/brand_guidelines/yelp_fullcolor_outline.png" width="50px" alt="yelp">reviews</a>
-			
-			<!-- <div>
-				<p>Bad Reviews:</p>
-				negative reviews
-				<img src="chickfilabad.png" width="400px">
-			</div> -->
+				<a href="https://www.yelp.com/biz/chick-fil-a-dallas">
+					Chick-fil-a
+					<img src="https://s3-media3.fl.yelpcdn.com/assets/srv0/styleguide/24e1fe240f00/assets/img/brand_guidelines/yelp_fullcolor_outline.png" width="50px" alt="yelp">
+					reviews
+				</a>
 			
 				<!-- screenshot maps/directions -->
 				<iframe src="https://www.google.com/maps/embed?pb=!1m22!1m12!1m3!1d107093.34990071139!2d-96.9793271544427!3d32.98618144991843!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m7!3e6!4m0!4m4!1s0x864c25e4d1bfd853%3A0x46ac6db7a5c0b5ac!3m2!1d32.986201!2d-96.90928699999999!5e0!3m2!1sen!2sus!4v1517334998957" width="400" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
@@ -43,7 +42,7 @@
 		<div class="rest">
 			<a href="http://www.phobistro.biz/">
 				<img src="https://d1d4fj96f6cmxm.cloudfront.net/restaurant-logos/3201/large-6c6e616e5327fba107c9005740f34a1c.jpg?1395234774" alt="Pho Bistro Logo" class="logo">
-				<button class="button">2.Pho Bistro</button>
+				<button class="button1">2.Pho Bistro</button>
 			</a>
 			<p>Pho Bistro is a Great Vietnamese soup shop. Great family vibe.</p>
 			<p><b>Fave dish:</b> Vermecelli with Lemongrass Beef</p>
@@ -74,7 +73,7 @@
 		<div class="rest">
 			<a href="http://www.indiachaatcafedallas.com/">
 				<img src="https://media-cdn.tripadvisor.com/media/photo-s/06/69/54/6c/india-chaat-cafe.jpg" alt="India Chaat Cafe Logo" width="300px" class="logo">
-				<button class="button">3.India Chaat Cafe </button>
+				<button class="button1">3.India Chaat Cafe </button>
 			</a>
 			<p>One of the very few good indian food plases in the area.</p>
 			<p><b>Fave dish:</b> Gobi Manchurian</p>
@@ -102,7 +101,7 @@
 		<div class="rest">
 			<a href="http://www.fuzzystacoshop.com">
 				<img src="http://txgarage.com/images/2012/03/Fuzzys-EPS-Logo-White.jpeg" alt="Fuzzy taco Logo" class="logo">
-				<button class="button">4. Fuzzy's Taco</button>
+				<button class="button1">4. Fuzzy's Taco</button>
 			</a>
 			<p>Its a taco shop! What more is there?!</p>
 			<p><b>Fave dish:</b> Shrimp Tempura Salad with Avocado Ranch</p>
@@ -130,7 +129,7 @@
 		<div class="rest">
 			<a href="https://kurausa.com/">
 				<img src="https://media.glassdoor.com/sqll/1021463/kula-revolving-sushi-bar-squarelogo-1458257184653.png" alt="Kura Logo" width="300" class="logo">
-				<button class="button">5.Kura Sushi Bar </button>
+				<button class="button1">5.Kura Sushi Bar </button>
 			</a>
 			<p>The coolest sushi place you will ever go!</p>
 			<p><b>Fave dish:</b>Baked Salmon Crunch Roll</p>
